--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <title>DevJam 2021</title>
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="">
             <div class="row backgroundDiv">
                 <img class="devjam_image" src="./backgroundImage.jpeg" alt="" />
                 <img
@@ -119,7 +119,13 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(1)"
+                            >
+                                Explore
+                            </button>
                         </div>
                     </div>
                     <div class="ps_card" style="width: 18rem">
@@ -135,7 +141,13 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(2)"
+                            >
+                                Explore
+                            </button>
                         </div>
                     </div>
                     <div class="ps_card" style="width: 18rem">
@@ -151,7 +163,13 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(3)"
+                            >
+                                Explore
+                            </button>
                         </div>
                     </div>
                     <div class="ps_card" style="width: 18rem">
@@ -167,7 +185,13 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(4)"
+                            >
+                                Explore
+                            </button>
                         </div>
                     </div>
                     <div class="ps_card" style="width: 18rem">
@@ -183,7 +207,13 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(5)"
+                            >
+                                Explore
+                            </button>
                         </div>
                     </div>
                     <div class="ps_card" style="width: 18rem">
@@ -199,11 +229,38 @@
                                 Some text explaining the gist of the problem
                                 statement.
                             </p>
-                            <a href="#" class="btn btn-primary">Explore</a>
+                            <button
+                                id="exploreButton"
+                                class="btn btn-primary"
+                                onclick="func(6)"
+                            >
+                                Explore
+                            </button>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="backdropDiv" id="backdropDivId">
+                <div class="problemStatementPopUpDiv">
+                    <div class="problemStatementPopUpDivHeader">
+                        <h1 id="problemStatementPopUpDivH1">Hello</h1>
+                    </div>
+                    <hr />
+                    <div id="problemStatementPopUpDivP">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Magni, laudantium inventore quo harum possimus
+                            voluptatibus dicta ea nulla optio minima itaque
+                            asperiores ut unde ad cum exercitationem aliquam
+                            enim sed placeat nobis qui quod earum, illo
+                            explicabo? Ducimus, illum. Repellendus repudiandae,
+                            assumenda perferendis vero sed totam quod
+                            consequatur adipisci vel.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </body>
+    <script src="./script.js"></script>
 </html>
