--- a/index.html
+++ b/index.html
@@ -63,7 +63,35 @@
                 </p> -->
                 <!-- <i class="fas fa-chevron-down bottom-scroll"></i> -->
             </div>
-
+            <div class="registerButton">
+                <button
+                    data-tf-popup="luZImzCT"
+                    data-tf-auto-close="2000"
+                    style="
+                        all: unset;
+                        font-family: Helvetica, Arial, sans-serif;
+                        display: inline-block;
+                        max-width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        background-color: #0445af;
+                        color: #ffffff;
+                        font-size: 26px;
+                        border-radius: 32px;
+                        padding: 0 43px;
+                        font-weight: bold;
+                        height: 65px;
+                        cursor: pointer;
+                        line-height: 65px;
+                        text-align: center;
+                        margin: 0;
+                        text-decoration: none;
+                    "
+                >
+                    Register Now!
+                </button>
+            </div>
             <div class="cashPriceDiv">
                 <div class="cashPriceDivH">
                     <img
@@ -259,6 +287,35 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="registerButton" style="margin-bottom: 2rem;">
+                <button
+                    data-tf-popup="luZImzCT"
+                    data-tf-auto-close="2000"
+                    style="
+                        all: unset;
+                        font-family: Helvetica, Arial, sans-serif;
+                        display: inline-block;
+                        max-width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        background-color: #0445af;
+                        color: #ffffff;
+                        font-size: 26px;
+                        border-radius: 32px;
+                        padding: 0 43px;
+                        font-weight: bold;
+                        height: 65px;
+                        cursor: pointer;
+                        line-height: 65px;
+                        text-align: center;
+                        margin: 0;
+                        text-decoration: none;
+                    "
+                >
+                    Register Now!
+                </button>
             </div>
         </div>
     </body>
